log
Thu, Apr 17, 2025  8:51:18 PM: 
 hashmap.c | 9 +++++++--
 1 file changed, 7 insertions(+), 2 deletions(-)
 tests:  0|6
total_score: 0/70
eeef3b7
Fri, Apr 18, 2025  9:21:44 AM: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
70d643d
Fri, Apr 18, 2025  9:42:18 AM: 
 hashmap.c | 10 +++++++++-
 1 file changed, 9 insertions(+), 1 deletion(-)
 tests:  2|5
total_score: 20/70
f257585
Fri, Apr 18, 2025  9:44:04 AM: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 20/70
a463754
Fri, Apr 18, 2025  9:45:41 AM: 
 hashmap.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  2|5
total_score: 20/70
c997a65
Fri, Apr 18, 2025 10:58:45 AM: 
 hashmap.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  2|5
total_score: 20/70
8f56544
Fri, Apr 18, 2025 10:59:30 AM: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 20/70
d392d61
Fri, Apr 18, 2025 11:00:16 AM: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 30/70
ec72262
Fri, Apr 18, 2025 11:00:45 AM: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  5|4
total_score: 30/70
659d382
Fri, Apr 18, 2025 12:31:03 PM: 
 hashmap.c | 17 ++++++++++++-----
 1 file changed, 12 insertions(+), 5 deletions(-)
 tests:  8|3
total_score: 40/70
1f8be78
Fri, Apr 18, 2025 12:36:53 PM: 
 hashmap.c | 8 +++++---
 1 file changed, 5 insertions(+), 3 deletions(-)
 tests:  0|0
6bbae18
Fri, Apr 18, 2025 12:37:33 PM: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  11|2
total_score: 50/70
5a12db6
Fri, Apr 18, 2025 12:42:13 PM: 
 hashmap.c | 11 +++++++++--
 1 file changed, 9 insertions(+), 2 deletions(-)
Compilation failed
In file included from test.c:4:0:
hashmap.c: In function 'firstMap':
hashmap.c:103:22: error: return from incompatible pointer type [-Werror=incompatible-pointer-types]
         return (*map).buckets;
                ~~~~~~^~~~~~~~
cc1.exe: all warnings being treated as errors
491a751
Fri, Apr 18, 2025 12:42:29 PM: 
Compilation failed
In file included from test.c:4:0:
hashmap.c: In function 'firstMap':
hashmap.c:103:22: error: return from incompatible pointer type [-Werror=incompatible-pointer-types]
         return (*map).buckets;
                ~~~~~~^~~~~~~~
cc1.exe: all warnings being treated as errors
c21ed16
Fri, Apr 18, 2025 12:42:34 PM: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  12|2
total_score: 50/70
e35a8ba
